--- a/app/wheelTracker/wheelTracker/Record.storyboard
+++ b/app/wheelTracker/wheelTracker/Record.storyboard
@@ -16,60 +16,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="anK-yj-cfb">
-                                <rect key="frame" x="20" y="44" width="374" height="732"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="anK-yj-cfb">
+                                <rect key="frame" x="20" y="44" width="374" height="752"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3MP-SA-CwV">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFn-gn-Lr0">
                                                 <rect key="frame" x="0.0" y="0.0" width="124.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="Day"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jaf-4b-ZaD">
                                                 <rect key="frame" x="124.5" y="0.0" width="125" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="Week"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLG-xv-mH9">
                                                 <rect key="frame" x="249.5" y="0.0" width="124.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="Month"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zgE-UX-f5T" customClass="LineChartView" customModule="Charts">
-                                        <rect key="frame" x="0.0" y="38" width="374" height="277"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgE-UX-f5T" customClass="LineChartView" customModule="Charts">
+                                        <rect key="frame" x="0.0" y="34" width="374" height="412"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1Qa-S5-3Je">
-                                        <rect key="frame" x="0.0" y="323" width="374" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1Qa-S5-3Je">
+                                        <rect key="frame" x="0.0" y="450" width="374" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Lp-t0-nNw">
                                                 <rect key="frame" x="0.0" y="0.0" width="93.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="걸음수"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfX-n5-0ln">
                                                 <rect key="frame" x="93.5" y="0.0" width="93.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="거리"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G19-Nc-D7d">
                                                 <rect key="frame" x="187" y="0.0" width="93.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="칼로리"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h77-XY-gWA">
                                                 <rect key="frame" x="280.5" y="0.0" width="93.5" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <state key="normal" title="시간"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0TL-eM-VRf">
-                                        <rect key="frame" x="0.0" y="361" width="374" height="371"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0TL-eM-VRf">
+                                        <rect key="frame" x="0.0" y="484" width="374" height="268"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="268" id="LoG-hH-tup"/>
+                                        </constraints>
                                     </tableView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DUz-Md-JUA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="anK-yj-cfb" firstAttribute="top" secondItem="DUz-Md-JUA" secondAttribute="top" id="82N-IE-B32"/>
+                            <constraint firstAttribute="bottom" secondItem="anK-yj-cfb" secondAttribute="bottom" constant="100" id="84x-EB-zMl"/>
+                            <constraint firstItem="anK-yj-cfb" firstAttribute="centerX" secondItem="3O4-zi-ElR" secondAttribute="centerX" id="cQh-qU-kfq"/>
+                            <constraint firstItem="anK-yj-cfb" firstAttribute="leading" secondItem="3O4-zi-ElR" secondAttribute="leadingMargin" id="pSY-s1-NeK"/>
+                            <constraint firstItem="anK-yj-cfb" firstAttribute="centerX" secondItem="3O4-zi-ElR" secondAttribute="centerX" id="tbb-OP-fCu"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Record" image="list.bullet.rectangle" catalog="system" id="hOL-S5-OZB"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
